--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.abc</groupId>
-	<artifactId>customer-management</artifactId>
+	<artifactId>requestCustomer-management</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>customer-management</name>
+	<name>requestCustomer-management</name>
 	<description>Customer Management</description>
 	<properties>
 		<java.version>17</java.version>
