--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto =update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
