--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto =update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG.
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
