--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
+
 spring.datasource.url=jdbc:h2:mem:customer-db
+#spring.datasource.url=jdbc:h2:file:/home/jonpc/Workstation/db/custmgmt.db
+#spring.datasource.url=jdbc:h2:file:/home/jonpc/Workstation/db/one.db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.properties.hibernate.show_sql=true
+#spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto =update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+#spring.jpa.properties.hibernate.show_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.orm.jdbc.bind=TRACE
+# logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
